* fixed an issue where the pagination was showing up twice on collections and search results  * Fixed styling for when the previous/next labels are too long.

--- a/agsci/common/theme/assets/css/_pagination.scss
+++ b/agsci/common/theme/assets/css/_pagination.scss
@@ -8,7 +8,7 @@
 }
 .pagination ul {
     padding-left: 0;
-    display: inline-block;
+    display: block;
     margin: 0.5rem auto;
 }
 .pagination li {
@@ -17,6 +17,7 @@
   position: relative;
   padding: 0;
   font-weight: 300;
+  line-height: 2.5;
   /* wanna hide the label "next ... items"? */
   /* .label {
       display: none;
@@ -25,7 +26,7 @@
 .pagination li > a,
 .pagination li > span {
   padding: 6px 12px !important;
-  line-height: 1.42857143;
+  line-height: normal;
   text-decoration: none;
   color: #007bb1;
   background-color: #fff;
@@ -34,8 +35,7 @@
 }
 .pagination li.previous::before,
 .pagination li.next::after {
-    content: "";
-    margin: 0;
+    display: none;
 }
 .pagination li.previous > a {
   margin-left: 0;
